--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,93 +1,107 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
+@article{meier2020diapasef,
+  title={diaPASEF: parallel accumulation--serial fragmentation combined with data-independent acquisition},
+  author={Meier, Florian and Brunner, Andreas-David and Frank, Max and Ha, Annie and Bludau, Isabell and Voytik, Eugenia and Kaspar-Schoenefeld, Stephanie and Lubeck, Markus and Raether, Oliver and Bache, Nicolai and others},
+  journal={Nature methods},
+  volume={17},
+  number={12},
+  pages={1229--1236},
+  year={2020},
+  publisher={Nature Publishing Group US New York},
+  html={https://www.nature.com/articles/s41592-020-00998-0},
+  abstract={Data-independent acquisition modes isolate and concurrently fragment populations of different precursors by cycling through segments of a predefined precursor m/z range. Although these selection windows collectively cover the entire m/z range, overall, only a few per cent of all incoming ions are isolated for mass analysis. Here, we make use of the correlation of molecular weight and ion mobility in a trapped ion mobility device (timsTOF Pro) to devise a scan mode that samples up to 100% of the peptide precursor ion current in m/z and mobility windows. We extend an established targeted data extraction workflow by inclusion of the ion mobility dimension for both signal extraction and scoring and thereby increase the specificity for precursor identification. Data acquired from whole proteome digests and mixed organism samples demonstrate deep proteome coverage and a high degree of reproducibility as well as quantitative accuracy, even from 10ng sample amounts.},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{heusel2019complex,
+  title={Complex-centric proteome profiling by SEC-SWATH-MS},
+  author={Heusel, Moritz and Bludau, Isabell and Rosenberger, George and Hafen, Robin and Frank, Max and Banaei-Esfahani, Amir and van Drogen, Audrey and Collins, Ben C and Gstaiger, Matthias and Aebersold, Ruedi},
+  journal={Molecular systems biology},
+  volume={15},
+  number={1},
+  pages={e8438},
+  year={2019}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{heusel2020global,
+  title={A global screen for assembly state changes of the mitotic proteome by SEC-SWATH-MS},
+  author={Heusel, Moritz and Frank, Max and K{\"o}hler, Mario and Amon, Sabine and Frommelt, Fabian and Rosenberger, George and Bludau, Isabell and Aulakh, Simran and Linder, Monika I and Liu, Yansheng and others},
+  journal={Cell systems},
+  volume={10},
+  number={2},
+  pages={133--155},
+  year={2020},
+  publisher={Cell Press},
+  selected={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{bludau2021systematic,
+  title={Systematic detection of functional proteoform groups from bottom-up proteomic datasets},
+  author={Bludau, Isabell and Frank, Max and D{\"o}rig, Christian and Cai, Yujia and Heusel, Moritz and Rosenberger, George and Picotti, Paola and Collins, Ben C and R{\"o}st, Hannes and Aebersold, Ruedi},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={3810},
+  year={2021},
+  publisher={Nature Publishing Group UK London},
+  selected={true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{liu2019multi,
+  title={Multi-omic measurements of heterogeneity in HeLa cells across laboratories},
+  author={Liu, Yansheng and Mi, Yang and Mueller, Torsten and Kreibich, Saskia and Williams, Evan G and Van Drogen, Audrey and Borel, Christelle and Frank, Max and Germain, Pierre-Luc and Bludau, Isabell and others},
+  journal={Nature biotechnology},
+  volume={37},
+  number={3},
+  pages={314--322},
+  year={2019},
+  publisher={Nature Publishing Group US New York},
+  selected={true}
+}
+
+@article{ha2019mobi,
+  title={Mobi-DIK (Ion Mobility DIA Analysis Kit): Targeted analysis software for diaPASEF data improves proteome coverage},
+  author={Ha, Annie and Frank, Max and Meier, Florian and Brunner, Andreas-David and Kaspar-Schoenefeld, Stephanie and Koch, Scarlet and Lubeck, Markus and Raether, Oliver and Collins, Ben C and Aebersold, Ruedi and others},
+  year={2019},
+  publisher={AMER SOC BIOCHEMISTRY MOLECULAR BIOLOGY INC}
+}
+
+@article{salovska2020isoform,
+  title={Isoform-resolved correlation analysis between mRNA abundance regulation and protein level degradation},
+  author={Salovska, Barbora and Zhu, Hongwen and Gandhi, Tejas and Frank, Max and Li, Wenxue and Rosenberger, George and Wu, Chongde and Germain, Pierre-Luc and Zhou, Hu and Hodny, Zdenek and others},
+  journal={Molecular systems biology},
+  volume={16},
+  number={3},
+  pages={e9170},
+  year={2020}
+}
+
+@article{meier2019parallel,
+  title={Parallel accumulation--serial fragmentation combined with data-independent acquisition (diaPASEF): Bottom-up proteomics with near optimal ion usage},
+  author={Meier, Florian and Brunner, Andreas-David and Frank, Max and Ha, Annie and Voytik, Eugenia and Kaspar-Schoenefeld, Stephanie and Lubeck, Markus and Raether, Oliver and Aebersold, Ruedi and Collins, Ben C and others},
+  journal={bioRxiv},
+  pages={656207},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{bludau2020complex,
+  title={Complex-centric proteome profiling by SEC-SWATH-MS for the parallel detection of hundreds of protein complexes},
+  author={Bludau, Isabell and Heusel, Moritz and Frank, Max and Rosenberger, George and Hafen, Robin and Banaei-Esfahani, Amir and van Drogen, Audrey and Collins, Ben C and Gstaiger, Matthias and Aebersold, Ruedi},
+  journal={Nature protocols},
+  pages={1--47},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{vonesch2020mcq,
+  title={McQ--An open-source multiplexed SARS-CoV-2 quantification platform},
+  author={Vonesch, Sibylle C and Bredikhin, Danila and Dobrev, Nikolay and Villacorta, Laura and Kleinendorst, Rozemarijn and Cacace, Elisabetta and Flock, Julia and Frank, Max and Jung, Ferris and Kornienko, Julia and others},
+  journal={medRxiv},
+  pages={2020--12},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory Press}
 }
