--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,40 +1,11 @@
 ---
 ---
 
-
-@article{meier2020diapasef,
-  title={diaPASEF: parallel accumulation--serial fragmentation combined with data-independent acquisition},
-  author={Meier, Florian and Brunner, Andreas-David and Frank, Max and Ha, Annie and Bludau, Isabell and Voytik, Eugenia and Kaspar-Schoenefeld, Stephanie and Lubeck, Markus and Raether, Oliver and Bache, Nicolai and others},
-  journal={Nature methods},
-  volume={17},
-  number={12},
-  pages={1229--1236},
-  year={2020},
-  publisher={Nature Publishing Group US New York},
-  html={https://www.nature.com/articles/s41592-020-00998-0},
-  abstract={Data-independent acquisition modes isolate and concurrently fragment populations of different precursors by cycling through segments of a predefined precursor m/z range. Although these selection windows collectively cover the entire m/z range, overall, only a few per cent of all incoming ions are isolated for mass analysis. Here, we make use of the correlation of molecular weight and ion mobility in a trapped ion mobility device (timsTOF Pro) to devise a scan mode that samples up to 100% of the peptide precursor ion current in m/z and mobility windows. We extend an established targeted data extraction workflow by inclusion of the ion mobility dimension for both signal extraction and scoring and thereby increase the specificity for precursor identification. Data acquired from whole proteome digests and mixed organism samples demonstrate deep proteome coverage and a high degree of reproducibility as well as quantitative accuracy, even from 10ng sample amounts.},
-  selected={true}
-}
-
-@article{heusel2019complex,
-  title={Complex-centric proteome profiling by SEC-SWATH-MS},
-  author={Heusel, Moritz and Bludau, Isabell and Rosenberger, George and Hafen, Robin and Frank, Max and Banaei-Esfahani, Amir and van Drogen, Audrey and Collins, Ben C and Gstaiger, Matthias and Aebersold, Ruedi},
-  journal={Molecular systems biology},
-  volume={15},
-  number={1},
-  pages={e8438},
-  year={2019}
-}
-
-@article{heusel2020global,
-  title={A global screen for assembly state changes of the mitotic proteome by SEC-SWATH-MS},
-  author={Heusel, Moritz and Frank, Max and K{\"o}hler, Mario and Amon, Sabine and Frommelt, Fabian and Rosenberger, George and Bludau, Isabell and Aulakh, Simran and Linder, Monika I and Liu, Yansheng and others},
-  journal={Cell systems},
-  volume={10},
-  number={2},
-  pages={133--155},
-  year={2020},
-  publisher={Cell Press},
+@phdthesis{citekey,
+  author={Frank, Max},
+  title={Modeling epigenetic heterogeneity across time and genome in single-cell multi-omics experiments},
+  school={EMBL Heidelberg and University of Heidelberg},
+  year={2024},
   selected={true}
 }
 
@@ -50,6 +21,42 @@
   selected={true}
 }
 
+@article{meier2020diapasef,
+  title={diaPASEF: parallel accumulation--serial fragmentation combined with data-independent acquisition},
+  author={Meier, Florian and Brunner, Andreas-David and Frank, Max and Ha, Annie and Bludau, Isabell and Voytik, Eugenia and Kaspar-Schoenefeld, Stephanie and Lubeck, Markus and Raether, Oliver and Bache, Nicolai and others},
+  journal={Nature methods},
+  volume={17},
+  number={12},
+  pages={1229--1236},
+  year={2020},
+  publisher={Nature Publishing Group US New York},
+  html={https://www.nature.com/articles/s41592-020-00998-0},
+  abstract={Data-independent acquisition modes isolate and concurrently fragment populations of different precursors by cycling through segments of a predefined precursor m/z range. Although these selection windows collectively cover the entire m/z range, overall, only a few per cent of all incoming ions are isolated for mass analysis. Here, we make use of the correlation of molecular weight and ion mobility in a trapped ion mobility device (timsTOF Pro) to devise a scan mode that samples up to 100% of the peptide precursor ion current in m/z and mobility windows. We extend an established targeted data extraction workflow by inclusion of the ion mobility dimension for both signal extraction and scoring and thereby increase the specificity for precursor identification. Data acquired from whole proteome digests and mixed organism samples demonstrate deep proteome coverage and a high degree of reproducibility as well as quantitative accuracy, even from 10ng sample amounts.},
+  selected={true}
+}
+
+@article{heusel2020global,
+  title={A global screen for assembly state changes of the mitotic proteome by SEC-SWATH-MS},
+  author={Heusel, Moritz and Frank, Max and K{\"o}hler, Mario and Amon, Sabine and Frommelt, Fabian and Rosenberger, George and Bludau, Isabell and Aulakh, Simran and Linder, Monika I and Liu, Yansheng and others},
+  journal={Cell systems},
+  volume={10},
+  number={2},
+  pages={133--155},
+  year={2020},
+  publisher={Cell Press},
+  selected={true}
+}
+
+@article{heusel2019complex,
+  title={Complex-centric proteome profiling by SEC-SWATH-MS},
+  author={Heusel, Moritz and Bludau, Isabell and Rosenberger, George and Hafen, Robin and Frank, Max and Banaei-Esfahani, Amir and van Drogen, Audrey and Collins, Ben C and Gstaiger, Matthias and Aebersold, Ruedi},
+  journal={Molecular systems biology},
+  volume={15},
+  number={1},
+  pages={e8438},
+  year={2019}
+}
+
 @article{liu2019multi,
   title={Multi-omic measurements of heterogeneity in HeLa cells across laboratories},
   author={Liu, Yansheng and Mi, Yang and Mueller, Torsten and Kreibich, Saskia and Williams, Evan G and Van Drogen, Audrey and Borel, Christelle and Frank, Max and Germain, Pierre-Luc and Bludau, Isabell and others},
@@ -59,7 +66,6 @@
   pages={314--322},
   year={2019},
   publisher={Nature Publishing Group US New York},
-  selected={true}
 }
 
 @article{ha2019mobi,
